MCR-3391 migrate tests in mycore-base to JUnit 5